# bsds

./: .gitignore  Makefile  README.md  bsds-dashboard-migration-plan.md  notes.md  staff.toml.example
apps/backend/: .env.example  Cargo.toml
apps/backend/migrations/: 0001_initial.sql
apps/backend/src/: lib.rs  main.rs
apps/backend/src/auth/: mod.rs  permissions.rs  temp_password.rs
apps/backend/src/db/: mod.rs  models.rs
apps/backend/src/integrations/: mod.rs  razorpay.rs  whatsapp.rs
apps/backend/src/repositories/: activity_logs.rs  approvals.rs  audit_logs.rs  members.rs  memberships.rs  mod.rs  receipts.rs  sponsor_links.rs  sponsors.rs  transactions.rs  users.rs
apps/backend/src/routes/: activity_log.rs  approvals.rs  audit_log.rs  auth.rs  cron.rs  dashboard.rs  members.rs  memberships.rs  mod.rs  my_membership.rs  notifications.rs  onboarding.rs  payments.rs  receipts.rs  sponsor_links.rs  (+3 more)
apps/backend/tests/: COVERAGE.md  README.md  approvals_integration.rs  approvals_integration.rs.bak2  auth_integration.rs  cron_integration.rs  dashboard_integration.rs  member_lifecycle_integration.rs  members_integration.rs  memberships_integration.rs  memberships_integration.rs.bak  receipts_integration.rs  security_integration.rs  sponsor_links_integration.rs  sponsors_integration.rs  support_encrypt.rs  support_member_id.rs  support_receipt.rs  test_auth_security.rs  test_backup.rs  test_business_logic.rs  test_sponsors_payments.rs  test_support_utilities.rs  transaction_membership_link_integration.rs  transactions_integration.rs  webhooks_integration.rs
(+108 files in other folders)
