[package]
name = "bsds-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "bsds_backend"
path = "src/lib.rs"

[[bin]]
name = "bsds-backend"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "migrate", "chrono", "uuid"] }
bcrypt = "0.15"
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio-cron-scheduler = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
dotenvy = "0.15"
toml = { version = "0.8", features = ["parse"] }

[dev-dependencies]
tempfile = "3"
axum-test = "14"
tokio-test = "0.4"
pretty_assertions = "1"
